--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,39 @@
     position: relative;
 }
 
+.header-container{
+    padding-top: 22%;
+}
+
+.header-container :nth-child(1){
+    font-size: 1.9em;
+    color: white;
+    font-weight: 800;
+}
+
+.header-container :nth-child(2){
+    font-size: 3.5em;
+    color: white;
+    font-weight: 100;
+    margin-top: -2%;
+}
+
+.header-container :nth-child(3){
+    font-size: 1.7em;
+    color: white;
+    padding-right: 50%;
+    line-height: 35px;
+    margin-top: 2%;
+}
+
+.header-container button{
+    background-color: #0d0;
+    margin-top: 3%;
+    border: none;
+    border-radius: 5px;
+    padding: 9px 20px;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.1em;
+    font-weight: 600;
+}
