--- a/css/styles.css
+++ b/css/styles.css
@@ -166,4 +166,77 @@
 
 .section-4 .sub-2{
     justify-content: center;
+    padding-bottom: 5%;
 }
+
+.section-5{
+    justify-content: center;
+    margin-top: 5%;
+}
+
+.section-5 img{
+    margin-left:5%;
+}
+
+.section-5 .col :nth-child(1){
+    margin-left: 5%;
+    font-size: 2.8em;
+}
+
+.section-5 .col :nth-child(2){
+    margin-top: -4%;
+    font-size: 1em;
+}
+
+.section-5 .col :nth-child(3){
+    margin-top: 4%;
+    margin-left: 10%;
+    margin-bottom: 4%;
+    font-size: 1.5em;
+    line-height: 30px
+}
+
+.section-5 .col a{
+    text-decoration: none;
+    margin-left: 10%;
+    font-size: 1.4em;
+    color: #0d0;
+    border-bottom: 1px solid #0d0;
+    padding-bottom: 1%;
+}
+
+.section-6 .sub-1{
+    margin-top: 10%;
+    text-align: center;
+    font-size: 2em;
+    line-height: 40px;
+}
+
+.section-6 .sub-2{
+    margin-top: 2%;
+    text-align: center;
+    font-size: 1.25em;
+}
+
+.section-6 .sub-3{
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-7{
+    background-color: #eee;
+    min-height: 320px;
+}
+
+.section-7 .sub-1{
+    text-align: center;
+    font-size: 2.5em;
+    padding-top: 3%;
+}
+
+.section-7 .col-sm{
+    padding-top: 2%;
+}
+
