--- a/css/styles.css
+++ b/css/styles.css
@@ -240,3 +240,66 @@
     padding-top: 2%;
 }
 
+.section-8{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    text-align: center;
+    font-size: 2.5em;
+    align-items: center;
+}
+
+.section-9{
+    text-align: center;
+    margin-top: 2%;
+    font-size: 2.5em;
+    align-items: center;
+    margin-bottom: 2%;
+}
+
+.section-9 :nth-child(1){
+    margin-bottom: 2%;
+}
+
+.section-10{
+    padding-top: 3%;
+    background-color: #eee;
+    text-align: center;
+    font-size: 2.5em;
+    line-height: 50px;
+}
+
+.section-10 button{
+    margin-top: 3%;
+    margin-bottom: 4%;
+    line-height: 40px;
+    font-size: .5em;
+    background-color: black;
+    border: none;
+    border-radius: 5px;
+    padding: 7px 22px;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    
+    font-weight: 200;
+}
+
+.footer{
+    background-color: black;
+}
+
+.footer .row{
+    padding-top: 3%;
+    padding-bottom: 3%;
+    justify-content: space-between;
+}
+
+.footer .sub :nth-child(1){
+    font-size: 1.1em;
+    color: #0d0;
+}
+
+.footer .sub :nth-child(2){
+    font-size: 1.1em;
+    font-weight: 600;
+    color: white;
+}
